# computer-vision

./: flappy.py  pyproject.toml  test.py  train.py
trainer/: labels.npy
