[project]
name = "cv-day2-rgb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.32",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.90",
    "pygame>=2.6.1",
]
